--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,51 @@
     <h1>Lasagna</h1>
     <img src="/home/marcioblank/repos/odin-recipes/recipes/3536.jpg" height="310" width="500">
     <h2>Description</h2>
+    <p>The ground beef lasagna recipe is a classic, beloved dish that is very easy to make. Also known as lasagna à bolonhesa, due to its origin in Bologna, Italy, this recipe has conquered the world! This dish is a true celebration of flavors, with alternating layers of pasta, ground beef sauce, and melted cheese, 
+        resulting in a delicious and irresistible combination! With simple ingredients like ground beef, tomato sauce, cheese, ham, and lasagna noodles, this recipe is a practical and delicious option to gather the family around the table. Assembling this lasagna is an invitation to the delicious aroma that spreads 
+        through the kitchen during preparation. With a homemade touch and plenty of flavor, this dish is a sure bet for lovers of pasta and comfort food. Surprise your family and friends with this classic and tasty lasagna. Follow the step-by-step instructions of this recipe and discover how easy it is to prepare a 
+        ground beef lasagna that will be a hit on any occasion.</p>
     <h3>Ingredients</h3>
+    <ul>
+        For the Meat Sauce:
+        <li>Ground beef</li>
+        <li>Onion, chopped</li>
+        <li>Garlic, minced</li>
+        <li>Canned crushed tomatoes</li>
+        <li>Tomato paste</li>
+        <li>Dried oregano</li>
+        <li>Dried basil</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+        For the Cheese Mixture:
+        <li>Ricotta cheese</li>
+        <li>Parmesan cheese</li>
+        <li>Eggs</li>
+        For the Assembly:
+        <li>Lasagna noodles</li>
+        <li>Mozzarella cheese</li>
+        Optional:
+        <li>Italian sausage</li>
+        <li>Mushrooms</li>
+    </ul>
     <h3>Steps</h3>
+    <ol>
+        <li>Make the Meat Sauce</li>
+        <p>Brown ground beef in a large pot over medium heat. Drain off excess grease.
+        Add onion and garlic to the pot and cook until softened.
+        Stir in crushed tomatoes, tomato sauce, tomato paste, oregano, basil, salt, and pepper.
+        Bring to a boil, then reduce heat and simmer for 1-2 hours, or until thickened.</p>
+        <li>Prepare the Cheese Mixture</li>
+        <p>In a medium bowl, combine ricotta cheese, Parmesan cheese, and eggs. Mix well.</p>
+        <li>Assemble the Lasagna</li>
+        <p>Preheat oven to 375°F (190°C). Cook lasagna noodles according to package directions. Drain and set aside.
+        In a 9x13 inch baking dish, spread a thin layer of meat sauce. Layer 3 noodles over the sauce.
+        Spread half of the cheese mixture over the noodles.Top with another layer of meat sauce and noodles.
+        Spread the remaining cheese mixture over the noodles. Cover with the remaining meat sauce and sprinkle with mozzarella cheese.</p>
+        <li>Bake the Lasagna</li>
+        <p>Cover the dish with aluminum foil and bake for 30 minutes. Remove the foil and bake for an additional 20-25 minutes, or until the cheese is bubbly and golden brown.</p>
+        <li>Let it Rest</li>
+        <p>Let the lasagna rest for 10-15 minutes before serving.</p>
+    </ol>
 </body>
 </html>
