Project concluded (for now).

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/spaguetti.html">Spaguetti</a>
+    <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
+    <a href="recipes/spaguetti.html" target="_blank">Spaguetti</a>
+    <a href="recipes/ftropeiro.html" target="_blank">Tropeiro Beans</a>
 </body>
 </html>
