Index updated; apply more css in future

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
-    <a href="recipes/spaguetti.html" target="_blank">Spaguetti</a>
-    <a href="recipes/ftropeiro.html" target="_blank">Tropeiro Beans</a>
+    <div class="title"><h1>Odin Recipes</h1></div>
+    <div class="lasagna"><p><a href="recipes/lasagna/lasagna.html" target="_blank" rel="noreferrer">Lasagna</a></p></div>
+    <div class="spaguetti"><p><a href="recipes/spaguetti/spaguetti.html" target="_blank">Spaguetti</a></p></div>
+    <div class="ftropeiro"><p><a href="recipes/ftropeiro/ftropeiro.html" target="_blank">Tropeiro Beans</a></p></div>
 </body>
 </html>
