--- a/recipes/ftropeiro/ftropeiro.html
+++ b/recipes/ftropeiro/ftropeiro.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tropeiro Beans</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    <h1>Tropeiro Beans</h1>
-   <img src="/home/marcioblank/repos/odin-recipes/recipes/ftropeiro.jpg" height="300" width="500">
+   <img src="/home/marcioblank/Desktop/repos/odin-recipes/recipes/ftropeiro/ftropeiro.jpg" height="300" width="500">
    <h2>Description</h2>
    <p>Tropeiro beans is a traditional and flavorful dish from Brazilian cuisine. 
     Made with ingredients such as bacon, calabrese sausage, olive oil, onion, garlic, cooked beans, bacon broth, eggs, parsley, cassava flour, salt, and pepper, this dish offers a unique combination of flavors.</p>
