--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="/home/marcioblank/repos/odin-recipes/recipes/3536.jpg" height="310" width="500">
+    <img src="/home/marcioblank/Desktop/repos/odin-recipes/recipes/lasagna/3536.jpg" height="310" width="500">
     <h2>Description</h2>
     <p>The ground beef lasagna recipe is a classic, beloved dish that is very easy to make. Also known as lasagna à bolonhesa, due to its origin in Bologna, Italy, this recipe has conquered the world! This dish is a true celebration of flavors, with alternating layers of pasta, ground beef sauce, and melted cheese, 
         resulting in a delicious and irresistible combination! With simple ingredients like ground beef, tomato sauce, cheese, ham, and lasagna noodles, this recipe is a practical and delicious option to gather the family around the table. Assembling this lasagna is an invitation to the delicious aroma that spreads 
@@ -15,7 +16,7 @@
         ground beef lasagna that will be a hit on any occasion.</p>
     <h3>Ingredients</h3>
     <ul>
-        For the Meat Sauce:
+        <p>For the Meat Sauce:</p>
         <li>Ground beef</li>
         <li>Onion, chopped</li>
         <li>Garlic, minced</li>
@@ -25,11 +26,11 @@
         <li>Dried basil</li>
         <li>Salt</li>
         <li>Pepper</li>
-        For the Cheese Mixture:
+        <p>For the Cheese Mixture:</p>
         <li>Ricotta cheese</li>
         <li>Parmesan cheese</li>
         <li>Eggs</li>
-        For the Assembly:
+        <p>For the Assembly:</p>
         <li>Lasagna noodles</li>
         <li>Mozzarella cheese</li>
         Optional:
