--- a/recipes/spaguetti/spaguetti.html
+++ b/recipes/spaguetti/spaguetti.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaguetti</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Spaguetti</h1>
-    <img src="/home/marcioblank/repos/odin-recipes/recipes/Spaghetti-with-Meat-Sauce-Recipe-1-1200.jpg" height="300" width="500">
-    <h2>Description</h2>
+    <h1 class="title head">Spaguetti</h1>
+    <img id="recipeimage" src="/home/marcioblank/Desktop/repos/odin-recipes/recipes/spaguetti/Spaghetti-with-Meat-Sauce-Recipe-1-1200.jpg" height="300" width="500" alt="Spaguetti dish">
+    <h2 class="Description head">Description</h2>
     <p>My family’s favorite weeknight friendly spaghetti recipe is quick and simple. 
         The super flavorful spaghetti sauce is ready in 45 minutes and you can use your favorite ground meat to make it (beef, 
         turkey, and chicken are all excellent).</p>
     <p>I love pasta for quick weeknight dinners, and this spaghetti tossed with my quick and easy meat sauce fits the bill! You can use any ground meat for this sauce. I love 
         ground turkey, but ground beef, pork, and chicken are all excellent in this recipe.</p>
-    <h3>Ingredients</h3>
-    <ul>
+    <h3 class="head">Ingredients</h3>
+    <ul id="Ingredients">
         <li>1 pound (450g) dried spaghetti</li>
         <li>1 pound (450g) lean ground meat like ground beef or ground turkey</li>
         <li>3 tablespoons olive oil</li>
@@ -30,8 +31,8 @@
         <li>Handful of fresh basil leaves, plus more for serving</li>
         <li>Parmesan cheese, for serving</li>
     </ul>
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="head">Steps</h3>
+    <ol id="Steps">
         <li>Heat the oil in a large pot over medium-high heat (we use a Dutch oven).</li>
         <li>Add the meat and cook until browned, about 8 minutes. Use a wooden spoon to break the meat into smaller crumbles as the meat cooks.</li>
         <li>Add the onions and cook, stirring every once in a while, until softened, about 5 minutes.</li>
